<resources>
    <string name="app_name">Blade Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sync">Synchronize</string>
    <string name="action_settings">Settings</string>

    <string name="library">Library</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>

    <string name="sources">Sources</string>
    <string name="about">About</string>

    <string name="add_source">Add source…</string>

    <string name="spotify">Spotify</string>
    <string name="spotify_desc">Play music from a Spotify account</string>
    <string name="local">Local</string>
    <string name="local_desc">Play music from files on your phone</string>
    <string name="deezer">Deezer</string>
    <string name="deezer_desc">Play music from a Deezer account</string>

    <string name="item_image">Item image</string>
    <string name="item_more">More…</string>

    <string name="source_down_desc">Down - Please check configuration</string>
    <string name="source_need_init_desc">Need initialization - Either force or check config</string>
    <string name="source_connecting_desc">Connecting…</string>
    <string name="source_ready_desc">Ready</string>

    <string name="sign_in">Sign in</string>
    <string name="disconnected">Disconnected</string>
    <string name="auth_error">Authentication error</string>
    <string name="init_error">Could not init source</string>
    <string name="force_init">Force initialization</string>
    <string name="remove">Remove</string>
    <string name="version">Version</string>
    <string name="about_desc">Blade Player is an Android music player (by @vhaudiquet) made to play songs from multiple services.</string>
    <string name="about_license">License : Apache 2.0</string>
    <string name="about_logo">Logo : @zularizal</string>
    <string name="about_sources">Sources : github.com/vhaudiquet/BladePlayer</string>
    <string name="about_libraries_used">Libraries used :</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="spotify_login_desc">(You might need to enter your credentials again, for API and Player)</string>
    <string name="please_sync_to_apply">Please sync library to apply your changes</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_next">Skip to next</string>
    <string name="skip_previous">Skip to previous</string>
    <string name="notification_channel_name">Media playback</string>
    <string name="notification_channel_description">Media notification and controls</string>
    <string name="currently_playing">Currently playing</string>
    <string name="play_next">Play after current song</string>
    <string name="add_to_current_playlist">Add to current playlist</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="build_type" translatable="false">Build type</string>
    <string name="song_no_source_error">This song has no ready source. Something must be wrong in sources configuration…</string>
    <string name="search">Search</string>
    <string name="add_to_playlist">Add to playlist…</string>
    <string name="manage_libraries">Manage libraries</string>
    <string name="remove_from_list">Remove from playlist</string>
    <string name="song_added_to_list">Added %1$s to list %2$s</string>
    <string name="song_added_to_list_error">Could not add %1$s to list %2$s</string>
    <string name="new_playlist">New playlist</string>
    <string name="name">Name</string>
    <string name="ok" translatable="false">OK</string>
    <string name="could_not_create_playlist">Could not create playlist %1$s</string>
    <string name="are_you_sure_delete_playlist">Are you sure that you want to delete playlist %1$s ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="playlist_removed">Removed playlist %1$s</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="playlist_could_not_remove">Could not remove playlist %1$s</string>
    <string name="song_added_to_library">Song %1$s added to library</string>
    <string name="song_added_to_library_error">Song %1$s could not be added to library</string>
    <string name="song_removed_from_library">Song %1$s removed from library</string>
    <string name="song_removed_from_library_error">Song %1$s could not be removed from library</string>
    <string name="are_you_sure_remove_from_list">Are you sure that you want to remove %1$s from playlist %2$s ?</string>
    <string name="song_removed_from_list">%1$s removed from playlist %2$s</string>
    <string name="song_removed_from_list_error">%1$s could not be removed from playlist %2$s</string>
    <string name="spotify_player_panic">Spotify player error, something must be wrong (internet/settings ?)</string>
    <string name="grant_storage_permission">Grant permission to access storage</string>
    <string name="permission_already_granted">Permission already granted</string>
    <string name="permission_granted">Permission granted !</string>
    <string name="collaborative">Collaborative</string>
    <string name="player_not_ready">%1$s player was not ready</string>
    <string name="welcome_to_blade">Welcome to Blade player !</string>
    <string name="welcome_message">It seems like you did not configure any \'source\' of music (service from which Blade will get your music). Please go to settings (using the top right icon), \'Sources\', add a source using the + button, and click on it to configure it. When you\'re done, go back, hit the \'sync\' icon next to settings, and wait for synchronization. You\'re all set, listen to your music !</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="system_default">System default</string>
    <string name="explore">Explore</string>
    <string name="explore_sources">Explore sources</string>
    <string name="cant_search_here">There is nothing to search here</string>
    <string name="could_not_search_for">Could not search for %1$s</string>
    <string name="could_not_browse_album">Could not browse album %1$s</string>
    <string name="could_not_browse_artist">Could not browse artist %1$s</string>
    <string name="could_not_show_explore">Could not show explore tab</string>
    <string name="could_not_browse_playlist">Could not browse playlist %1$s</string>
    <string name="selection_too_big">Selection is too big</string>
    <string name="lyrics">Lyrics</string>
    <string name="audio_quality">Audio quality</string>
    <string name="quality_normal">Normal</string>
    <string name="quality_high">High</string>
    <string name="quality_very_high">Very high</string>
    <string name="preference_show_album_artist_only">Show album artists only</string>
    <string name="preference_show_album_artist_only_summary">Hide artists that are only featured in other artists albums in your library</string>
</resources>