<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/library">
            <menu>
                <item
                    android:id="@+id/nav_artists"
                    android:icon="@drawable/ic_artist"
                    android:title="@string/artists" />
                <item
                    android:id="@+id/nav_albums"
                    android:icon="@drawable/ic_album"
                    android:title="@string/albums" />
                <item
                    android:id="@+id/nav_songs"
                    android:icon="@drawable/ic_song"
                    android:title="@string/songs" />
                <item
                    android:id="@+id/nav_playlists"
                    android:icon="@drawable/ic_playlist"
                    android:title="@string/playlists" />
            </menu>
        </item>
        <item android:title="@string/explore">
            <menu>
                <item
                    android:id="@+id/nav_explore_sources"
                    android:icon="@drawable/ic_explore"
                    android:title="@string/explore_sources" />
            </menu>
        </item>
    </group>
</menu>