<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_artists">

    <fragment
        android:id="@id/nav_artists"
        android:name="v.blade.ui.LibraryFragment"
        android:label="@string/artists"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/nav_albums"
        android:name="v.blade.ui.LibraryFragment"
        android:label="@string/albums"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/nav_songs"
        android:name="v.blade.ui.LibraryFragment"
        android:label="@string/songs"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/nav_playlists"
        android:name="v.blade.ui.LibraryFragment"
        android:label="@string/playlists"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/nav_explore_sources"
        android:name="v.blade.ui.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />
</navigation>