<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:text="@string/app_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/about_version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/about_buildtype_text"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <com.google.android.material.textview.MaterialTextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/about_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/about_license" />

        <com.google.android.material.textview.MaterialTextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/about_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/about_sources" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginTop="20dp"
            android:text="@string/about_libraries_used" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="- Android Jetpack, license Apache 2.0, Copyright 2018 The Android Open Source Project, github.com/androidx/androidx"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="- Picasso, license Apache 2.0, Copyright 2013 Square, Inc., github.com/square/picasso"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="- Retrofit, license Apache 2.0, Copyright 2013 Square, Inc., github.com/square/retrofit"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="- Spotify Android Auth, license Apache 2.0, Copyright 2015-2016 Spotify AB, github.com/spotify/android-auth"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="- librespot-java, license Apache 2.0, Copyright 2021 devgianlu, github.com/librespot-org/librespot-java"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</ScrollView>